# SPWN-language

./: *.sublime-workspace  .gitignore  .pre-commit-config.yaml  0  Cargo.toml  LICENSE  README.md  TEST_.spwn  Velvetfox set@1  a  array.spwn  builtins.md  cbuild.bat  changelog.md  clippy.toml  cock.spwnc  crun.bat  default.nix  doctest.spwn  dog.txt  fgdfsgsdfg.rs  funny.spwn  help.txt  lib.spwn  rustfmt.toml  rustfmt_nightly.toml  spwn-language.sublime-workspace  string.spwn  test.spwn  test.spwnc  test2.spwn  test3.spwn  øøøøøøøøøøøøø  😂.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
.spwnc/: test2.spwnc
codegen/: Cargo.toml
codegen/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: builtins.rs  compiler.rs  compiler_types.rs  context.rs  globals.rs  leveldata.rs  lib.rs  parse_levelstring.rs  value.rs  value_storage.rs
docgen/: Cargo.toml
docgen/src/: documentation.rs  lib.rs
editorlive/: Cargo.toml
editorlive/src/: editorlive_mac.rs  editorlive_unavailable.rs  editorlive_win.rs  lib.rs
errors/: Cargo.toml
errors/src/: compiler_info.rs  lib.rs
examples/: sex.spwn
fart/: a.spwn  b.spwn
funny/: a.spwn  b.spwn
funny/.spwnc/: a.spwnc  b.spwnc
levelstring/: Cargo.toml
levelstring/src/: lib.rs
libraries/bilbo/: lib.spwn
libraries/core/: array.spwn  builtins.spwn  chroma.spwn  dict.spwn  error.spwn  float.spwn  int.spwn  lib.spwn  string.spwn
libraries/gamescene/: lib.spwn
libraries/guga/: lib.spwn
libraries/sex/: lib.spwn
libraries/std/: ASCII.spwn  array.spwn  binary_counter.spwn  block.spwn  builtins.spwn  chroma.spwn  color.spwn  complex.spwn  constants.spwn  control_flow.spwn  counter.spwn  dictionary.spwn  dye.spwn  easing.spwn  error.spwn  event.spwn  events.spwn  fileio.spwn  frames.spwn  frames_setup.spwn  general_triggers.spwn  group.spwn  hashmap.spwn  heapq.spwn  http.spwn  item.spwn  level_info.spwn  lib.spwn  log.spwn  macro.spwn  number.spwn  obj_ids.spwn  obj_set.spwn  object.spwn  ordereddict.spwn  path.spwn  range.spwn  regex.spwn  set.spwn  string.spwn  (+4 more)
minifier/: Cargo.toml
minifier/src/: fmt.rs  lib.rs  minifier.rs  optimise.rs  shared.rs
optimizer/: Cargo.toml
optimizer/src/: dead_code.rs  group_toggling.rs  lib.rs  optimize.rs  spawn_optimisation.rs  trigger_dedup.rs
parser/: Cargo.toml
parser/src/: ast.rs  fmt.rs  lib.rs  parser.rs
pckp/: Cargo.toml
pckp/src/: config_file.rs  download.rs  error.rs  lib.rs  package.rs  version.rs
shared/: Cargo.toml
shared/src/: lib.rs
spwn/: Cargo.toml  help.txt
spwn-lang/: *.sublime-workspace  Cargo.toml  editorlive_win.rs  gamescene-docs.md  help.txt  std-docs.md
spwn-lang/gamescene-docs/: array.md  block.md  color.md  counter.md  event.md  file.md  gamescene-docs.md  group.md  item.md
spwn-lang/libraries/: array.spwn  gamescene-docs.md
spwn-lang/libraries/gamescene/: lib.spwn
spwn-lang/libraries/std/: array.spwn  block.spwn  bool.spwn  color.spwn  constants.spwn  control_flow.spwn  counter.spwn  dict.spwn  dictionary.spwn  events.spwn  fileio.spwn  general_triggers.spwn  group.spwn  heapq.spwn  item.spwn  lib.spwn  number.spwn  obj_set.spwn  object.spwn  regex.spwn  string.spwn  util.spwn
spwn-lang/src/: _lib.rs  ast.rs  builtin.rs  compiler.rs  compiler_info.rs  compiler_types.rs  context.rs  documentation.rs  editorlive_mac.rs  editorlive_unavailable.rs  editorlive_win.rs  fmt.rs  globals.rs  icalgebra.rs  levelstring.rs  lib.rs  main.rs  native.rs  optimize.rs  parser.rs  spwn.pest  value.rs  value_storage.rs
spwn-lang/src/optimize/: icalgebra.rs
spwn-lang/std/: block.spwn  color.spwn  constants.spwn  control_flow.spwn  counter.spwn  events.spwn  general_triggers.spwn  group.spwn  item.spwn  lib.spwn
spwn-lang/std-docs/: array.md  block.md  color.md  counter.md  dictionary.md  event.md  file.md  group.md  item.md  obj_set.md  object.md  regex.md  std-docs.md  string.md
spwn-lang/test/: adder.spwn  bf_interpreter.spwn  bfold.spwn  binaryCalculator.spwn  brainfugd_pro.spwn  brainfugd_tutorial.txt  brainfugd_video_example.spwn  bugtest.spwn  calc3.spwn  calculator.spwn  calculatorv2.spwn  canvas.spwn  connect4.spwn  connect4v2.spwn  constants.spwn  everything.spwn  formatted.spwn  libtest.spwn  multidir.spwn  multiply.spwn  obj_props.spwn  readfiletest.txt  script.spwn  selector_panel.spwn  std-docs.md  std.spwn  sublibtest.spwn  sync_group_idea.spwn  test-docs.md  test.spwn  test.txt  text_display.spwn  text_display_pro.spwn
spwn-lang/test/libspwn_test/: Cargo.toml
spwn-lang/test/orthographic_rotation/: full_cube.spwn  index.spwn  message.txt  reference_grid.spwn  voxel.spwn
spwn-lang/wix/: commands.txt  generate_wix_lib_file.py  libraries.wxs  main.wxs
spwn-web/: Cargo.toml  index.html
spwn-web/src/: lib.rs
spwn/benches/: time.rs
spwn/src/: _lib.rs  compiler.rs  compiler_types.rs  context.rs  documentation.rs  globals.rs  leveldata.rs  lib.rs  main.rs  optimize.rs  tests.rs  value.rs  value_storage.rs
spwn/wix/: commands.sh  generate_wix_lib_file.py  libraries.wxs  main.wxs
src/: _lib.rs  ast.rs  builtin.rs  cli.rs  compiler.rs  compiler_types.rs  context.rs  contexts.rs  converter.rs  documentation.rs  editorlive_win.rs  error.rs  fmt.rs  globals.rs  interpreter.rs  levelstring.rs  lexer.rs  lib.rs  main.rs  optimize.rs  parser.rs  sources.rs  util.rs  value.rs  value_storage.rs
src/compilation/: code.rs  compiler.rs  error.rs  mod.rs  operators.rs
src/compiler/: compiler.rs  error.rs  lexer.rs  mod.rs  parser.rs
src/compiling/: builder.rs  bytecode.rs  compiler.rs  deprecated.rs  error.rs  mod.rs  opcodes.rs  optimize.rs
src/doc/: attributes.rs  error.rs  file.rs  impls.rs  mod.rs  types.rs
src/docgen/: ast.rs  docgen.rs  mod.rs  (+2 more)
test/: binaryCalculator.spwn  binary_counter.spwn  bugtest.spwn  collection.spwn  everything.spwn  jsontest.json  jsontest.spwn  number_literals_max.spwn  path_test.spwn  pckp.yaml  pckup.spwn  physics.spwn  readfiletest.spwn  readfiletest.txt  script.spwn  test.spwn  test2.spwn  tomltest.toml  yamltest.yaml
wix/: libraries.wxs  main.wxs
(+185 files in other folders)
