[package]
name = "spwn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
colored = "2.0.0"
ahash = {version = "0.8.2", features = ["serde"]}
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
regex = "1.7.1"
lazy_static = "1.4.0"
paste = "1.0.11"
unindent = "0.1.11"
base64 = "0.21.0"
lasso = "0.6.0"
slotmap = "1.0.6"
delve = { version = "0.3.0", features = ["derive"] }


quick-xml = "0.20.0"
libflate = "1.1.0"
crc32fast = "1.2.0"

aes = "0.7.4"
block-modes = "0.8.1"