[package]
name = "spwn"
version = "0.9.0"
edition = "2021"

[dependencies]
ariadne = { git = "https://github.com/zesterer/ariadne.git", features = ["auto-color"] }
concolor = { version = "0.0.11", features = ["auto"] }

colored = "2.0.0"
ahash = {version = "0.8.2", features = ["serde"] }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
regex = "1.7.1"
lazy_static = "1.4.0"
paste = "1.0.11"
unindent = "0.1.11"
base64 = "0.21.0"
lasso = "0.6.0"
slotmap = { version = "1.0.6", features = ["serde"] }
delve = { version = "0.3.0", features = ["derive"] }
md5 = "0.7.0"
strum = { version = "0.24", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
hex-serde = "0.1.0"
home = "0.5.4"
rand = "0.8.5"
levenshtein = "1.0.5"

quick-xml = "0.27.1"
libflate = "1.1.0"
crc32fast = "1.2.0"
aes = "0.7.4"
block-modes = "0.8.1"

spinoff = "0.7.0"

indoc = "2"
defile = "0.1.2"
