[package]
name = "compiler"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.2"
text_io = "0.1.8"
regex = "1.5.4"
slyce = "0.3.1"
rand = "0.8.4"
reqwest = { version = "0.11", features = ["blocking"] }

internment = "0.5.4"

ariadne = "0.1.3" # errors


base64 = "0.13.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8.19"
toml = "0.5.7"

parser = { path = "../parser" }
shared = { path = "../shared" }
errors = { path = "../errors" }
