[package]
name = "compiler"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
fancy-regex = "0.7.1"
slyce = "0.3.1"


internment = "0.5.4"
ariadne = "0.1.3" # errors
base64 = "0.13.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8.19"
toml = "0.5.7"
itertools = "0.10.1"

fnv = "1.0.6"
distance = "0.4.0"

include_dir = "0.6.2"

parser = { path = "../parser" }
shared = { path = "../shared" }
errors = { path = "../errors" }

slotmap = "1.0.6"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.4"
reqwest = { version = "0.11", features = ["blocking"] }