[package]
name = "docgen"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

internment = "0.5.4"
shared = { path = "../shared" }
errors = { path = "../errors" }
compiler = { path = "../compiler" }

fnv = "1.0.6"
