[package]
name = "editorlive"
version = "0.0.7"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.2"
libc = "0.2.81"

[target.'cfg(target_os = "windows")'.dependencies]
 named_pipe = "0.4.1"
