[package]
name = "parser"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

logos = "0.12.0"
internment = "0.5.4"
ariadne = "0.1.3" # errors
ahash = "0.7.6"
base64 = "0.13.0"

shared = { path = "../shared" }
errors = { path = "../errors" }
