[package]
name = "pckp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yaml-rust = "0.4"
fs_extra = "1.2.0"
git2 = "0.13"
reqwest = {version = "0.11.6", features = ["blocking"]}
lazy_static = "1.4.0"

# only on non wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
path-absolutize = "3.0"