[package]
name = "spwn"
version = "0.0.5"
authors = ["Spu7Nix <spu7nix@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.17.2"
base64 = "0.2.1"
libflate = "0.1.27"
lazy_static = "1.4.0"
crc32fast = "1.2.0"
logos = "0.11.4"
termcolor = "1.1.2"
smallvec = "1.4.2"
text_io = "0.1.8"
regex = "1.5.4"

internment = "0.5.4"

ariadne = "0.1.3" # errors

aes = "0.6.0"
block-modes = "0.7.0"

itertools = "0.8.2"
cached = "0.23.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.2"
libc = "0.2.81"

[target.'cfg(target_os = "windows")'.dependencies]
 named_pipe = "0.4.1"

# heat dir libraries -o wix/libraries.wxs -scom -frag -srd -sreg -gg -cg libraries -dr LIB_DIR -suid