[package]
name = "spwn-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
console_error_panic_hook = "0.1.6"
spwn = { path = "../spwn" }
js-sys = "0.3.55"