[package]
name = "spwn"
version = "0.0.6"
authors = ["Spu7Nix <main@spu7nix.net>"]
edition = "2018"
description = "A language for Geometry Dash triggers"
readme = "README.md"
homepage = "https://spu7nix.net/spwn/"
repository = "https://github.com/Spu7Nix/SPWN-language/"
license-file = "LICENSE"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spwn"
path = "src/main.rs"

[dependencies]

termcolor = "1.1.2"
text_io = "0.1.8"
regex = "1.5.4"
slyce = "0.3.1"
rand = "0.8.4"
tempfile = "3.2.0"
reqwest = { version = "0.11", features = ["blocking"] }

internment = "0.5.4"

ariadne = "0.1.3" # errors


itertools = "0.10.1"
cached = "0.25.0"

base64 = "0.13.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8.19"
toml = "0.5.7"

parser = { path = "../parser" }
shared = { path = "../shared" }
errors = { path = "../errors" }
levelstring = { path = "../levelstring" }
editorlive = { path = "../editorlive" }



# heat dir libraries -o wix/libraries.wxs -scom -frag -srd -sreg -gg -cg libraries -dr LIB_DIR -suid